--- a/BatchElectrodeOperation/BatchElectrodeOperation.csproj
+++ b/BatchElectrodeOperation/BatchElectrodeOperation.csproj
@@ -30,7 +30,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\Application\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\..\Program Files\Siemens\NX1899\NXBIN\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
